Separated oauth to new function

--- a/public/app/views/main.html
+++ b/public/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
-  <h4 class="work-type-header">Twitter Feeds for @pay_by_phone, @PayByPhone, @PayByPhone_UK</h4>
+  <h4 class="work-type-header">Twitter Feeds for @EA, @EASPORTS, @EA_Ca</h4>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="tweet in tweets track by $index">
       <a class="list-group-item" href="">
